Fix posts folder path

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Accessible Ecommerce
+description: Everything you ever needed to know about accessibility and ecommerce.
