Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 title: Accessible Ecommerce
 description: Everything you ever needed to know about accessibility and ecommerce.
 timezone: 'America/New_York'
