--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Accessible Ecommerce
 description: Everything you ever needed to know about accessibility and ecommerce.
 timezone: 'America/New_York'
+theme: jekyll-theme-slate
