--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: P.S Toronto Accessible E-Commerce Demo Store
+title: P.S Toronto Accessible E-Commerce Demo Store Blog
 description: Everything you ever needed to know about accessibility and ecommerce.
 timezone: 'America/New_York'
 theme: jekyll-theme-slate
